--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -1,11 +1,8 @@
 {
   "publicPath": "/minipress/",
   "all": [
-    "28.style.css",
+    "34.style.css",
     "9.style.css",
-    "assets/js/15.js",
-    "assets/js/16.js",
-    "assets/js/17.js",
     "assets/js/18.js",
     "assets/js/19.js",
     "assets/js/20.js",
@@ -17,6 +14,12 @@
     "assets/js/26.js",
     "assets/js/27.js",
     "assets/js/28.js",
+    "assets/js/29.js",
+    "assets/js/30.js",
+    "assets/js/31.js",
+    "assets/js/32.js",
+    "assets/js/33.js",
+    "assets/js/34.js",
     "assets/js/app.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
@@ -28,6 +31,9 @@
     "assets/js/page--85a15be2.js",
     "assets/js/page--90f8fd5e.js",
     "assets/js/page--99b23164.js",
+    "assets/js/page--9c27aea8.js",
+    "assets/js/page--a717f3f8.js",
+    "assets/js/page--af13e4d8.js",
     "assets/js/page--b55b5a58.js",
     "assets/js/page--c9680e70.js",
     "assets/js/page--ca11f630.js",
@@ -39,11 +45,8 @@
     "assets/js/app.js"
   ],
   "async": [
-    "28.style.css",
+    "34.style.css",
     "9.style.css",
-    "assets/js/15.js",
-    "assets/js/16.js",
-    "assets/js/17.js",
     "assets/js/18.js",
     "assets/js/19.js",
     "assets/js/20.js",
@@ -55,6 +58,12 @@
     "assets/js/26.js",
     "assets/js/27.js",
     "assets/js/28.js",
+    "assets/js/29.js",
+    "assets/js/30.js",
+    "assets/js/31.js",
+    "assets/js/32.js",
+    "assets/js/33.js",
+    "assets/js/34.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
     "assets/js/page--323ede5c.js",
@@ -65,6 +74,9 @@
     "assets/js/page--85a15be2.js",
     "assets/js/page--90f8fd5e.js",
     "assets/js/page--99b23164.js",
+    "assets/js/page--9c27aea8.js",
+    "assets/js/page--a717f3f8.js",
+    "assets/js/page--af13e4d8.js",
     "assets/js/page--b55b5a58.js",
     "assets/js/page--c9680e70.js",
     "assets/js/page--ca11f630.js",
@@ -72,184 +84,204 @@
   ],
   "modules": {
     "95a9d01c": [
-      31,
-      16
+      37,
+      19
     ],
     "387ccf72": [
-      31,
-      16
+      37,
+      19
     ],
-    "6f1988c9": [
-      31,
-      16
+    "cbd4e166": [
+      37,
+      19
     ],
-    "1304ad12": [
-      31,
-      16
+    "426991fb": [
+      37,
+      19
     ],
-    "59b22688": [
-      31,
-      16
+    "2faee984": [
+      37,
+      19
     ],
-    "b02d2474": [
-      31,
-      16
+    "5a35176c": [
+      37,
+      19
     ],
-    "c77d53a0": [
-      31,
-      16
+    "4419de98": [
+      37,
+      19
     ],
-    "1be05b89": [
-      31,
-      16
+    "76a4ffe6": [
+      37,
+      19
     ],
-    "28b79bd3": [
-      31,
-      16
+    "4f31d6cf": [
+      37,
+      19
     ],
-    "f35a86f8": [
-      31,
-      16
+    "5636e580": [
+      37,
+      19
     ],
-    "9bff78f6": [
-      31,
-      16
+    "0427a7ee": [
+      37,
+      19
     ],
-    "9570e406": [
-      31,
-      16
+    "49ff7cb4": [
+      37,
+      19
     ],
-    "30f06229": [
-      31,
-      16
+    "4336dca0": [
+      37,
+      19
     ],
-    "cff40476": [
-      31,
-      16
+    "7ecbc547": [
+      37,
+      19
     ],
-    "c235819e": [
-      31,
-      16
+    "324e940e": [
+      37,
+      19
     ],
-    "2dec82bc": [
-      31,
-      16
+    "65752c25": [
+      37,
+      19
     ],
-    "4af67ad2": [
-      31,
-      16
+    "381c336e": [
+      37,
+      19
     ],
-    "d076fe02": [
-      31,
-      16
+    "b4cbf296": [
+      37,
+      19
     ],
-    "01593eba": [
-      31,
-      16
+    "8e2430c4": [
+      37,
+      19
+    ],
+    "1adaa3ce": [
+      37,
+      19
+    ],
+    "773510fa": [
+      37,
+      19
     ],
     "030ce01d": [
-      31,
-      16
+      37,
+      19
     ],
     "918f3b92": [
-      31,
-      16
+      37,
+      19
+    ],
+    "4132c8a6": [
+      37,
+      19
     ],
     "bba014b0": [
-      31,
-      16
+      37,
+      19
     ],
     "6a1d5d88": [
-      31,
-      16
+      37,
+      19
     ],
-    "22e0f447": [
-      31,
-      16
+    "f4f1076a": [
+      37,
+      19
     ],
-    "2d5283f5": [
-      31,
-      16
+    "fd34a40e": [
+      37,
+      19
     ],
-    "10cc5e4a": [
-      31,
-      16
+    "08d02fc6": [
+      37,
+      19
     ],
-    "5bb0d944": [
-      31,
-      16
+    "83513d70": [
+      37,
+      19
     ],
-    "6afda7ae": [
-      31,
-      16
+    "754d63b2": [
+      37,
+      19
     ],
-    "7ee9d807": [
-      31,
-      16
+    "c97683ea": [
+      37,
+      19
     ],
-    "3c6d9795": [
-      31,
-      16
+    "4ddbe111": [
+      37,
+      19
     ],
-    "4c1d6146": [
-      31,
-      16
+    "51324e7c": [
+      37,
+      19
     ],
-    "2e55c3fa": [
-      31,
-      16
+    "3ce84807": [
+      37,
+      19
     ],
-    "590e033f": [
-      31,
-      16
+    "78ae8032": [
+      37,
+      19
     ],
-    "13d3332a": [
-      31,
-      16
+    "09debea4": [
+      37,
+      19
     ],
-    "624a4f7a": [
-      31,
-      16
+    "5756a8de": [
+      37,
+      19
     ],
-    "52b1fa2f": [
-      31,
-      16
+    "f13fcc8a": [
+      37,
+      19
     ],
-    "a2573938": [
-      31,
-      16
+    "2f7e4232": [
+      37,
+      19
     ],
-    "10c11f94": [
-      31,
-      16
+    "22ee0247": [
+      37,
+      19
     ],
-    "e9631706": [
-      31,
-      16
+    "0cdda333": [
+      37,
+      19
     ],
-    "02bb8684": [
-      31,
-      16
+    "3a1ddae0": [
+      37,
+      19
+    ],
+    "c7ead1e0": [
+      37,
+      19
+    ],
+    "6933ec81": [
+      37,
+      19
     ],
     "68a06702": [
-      31,
-      16
+      37,
+      19
     ],
     "5963f189": [
-      31,
-      16
+      37,
+      19
     ],
     "02025afe": [
-      31,
-      16
+      37,
+      19
     ],
     "76d094f0": [
-      31,
-      16
+      37,
+      19
     ],
     "8b285d1a": [
-      31,
-      16
+      37,
+      19
     ],
     "e22aaee4": [
       2
@@ -287,6 +319,12 @@
     "69ceb0d1": [
       7
     ],
+    "4f1d0e8b": [
+      17
+    ],
+    "619f1a14": [
+      17
+    ],
     "9ad66704": [
       8
     ],
@@ -299,35 +337,47 @@
     "4d5d4d89": [
       9
     ],
-    "2918c530": [
+    "50a4d344": [
       10
+    ],
+    "e316e122": [
+      10
+    ],
+    "2918c530": [
+      11
     ],
     "23c328c6": [
-      10
+      11
     ],
     "253188fd": [
-      11
+      12
     ],
     "d2bf829c": [
-      11
+      12
     ],
     "4668791e": [
-      12
+      13
     ],
     "cd987748": [
-      12
+      13
     ],
     "8fe2fa6a": [
-      13
+      14
     ],
     "b16f2e94": [
-      13
+      14
     ],
     "bb34b784": [
-      14
+      15
     ],
     "069c561a": [
-      14
+      15
+    ],
+    "3e4b0683": [
+      16
+    ],
+    "de0c0224": [
+      16
     ],
     "3e898de9": [
       2
@@ -353,7 +403,7 @@
     "065c61b2": [
       5
     ],
-    "722da8b1": [
+    "38b3d207": [
       6
     ],
     "1c669a12": [
@@ -364,6 +414,12 @@
     ],
     "21f525ca": [
       7
+    ],
+    "fbaebbf4": [
+      17
+    ],
+    "38fa936d": [
+      17
     ],
     "283f58bc": [
       8
@@ -377,35 +433,47 @@
     "43d8ce02": [
       9
     ],
-    "b28ecd74": [
+    "333fce8e": [
       10
+    ],
+    "62657eb4": [
+      10
+    ],
+    "b28ecd74": [
+      11
     ],
     "3d9e72d6": [
-      10
+      11
     ],
     "795caa79": [
-      11
+      12
     ],
     "31c2dbeb": [
-      11
-    ],
-    "7e68304c": [
       12
+    ],
+    "af68982c": [
+      13
     ],
     "fe58e15a": [
-      12
+      13
     ],
     "44ec401c": [
-      13
+      14
     ],
     "82a7bca6": [
-      13
+      14
     ],
     "c202ecb6": [
-      14
+      15
     ],
     "394d83ac": [
-      14
+      15
+    ],
+    "303c55f0": [
+      16
+    ],
+    "76ccb136": [
+      16
     ],
     "40606ad2": [
       2
@@ -425,141 +493,167 @@
     "21e584b2": [
       7
     ],
+    "276b3294": [
+      17
+    ],
     "6ec34a89": [
       8
     ],
     "0bb05f42": [
       9
     ],
-    "f029ff1a": [
+    "ce6ea7e6": [
       10
     ],
-    "0a03fe88": [
+    "f029ff1a": [
       11
     ],
-    "1eaeb9fa": [
+    "0a03fe88": [
       12
     ],
-    "3e6e0454": [
+    "1eaeb9fa": [
       13
     ],
-    "0625546e": [
+    "3e6e0454": [
       14
     ],
-    "195c653a": [
-      21
-    ],
-    "d58b2406": [
-      30
-    ],
-    "4c86b04f": [
-      28
-    ],
-    "1650993a": [
-      24
-    ],
-    "3ddf6e1d": [
-      22
-    ],
-    "1c6557ac": [
-      29
-    ],
-    "e0853982": [
-      1,
-      25
-    ],
-    "68d8e388": [
-      23
-    ],
-    "4a051872": [
-      27
-    ],
-    "74a7eade": [
-      20
-    ],
-    "35aeaf69": [
-      18
-    ],
-    "93493b92": [
-      19
-    ],
-    "e2f539c6": [
-      26
-    ],
-    "c01f7f70": [
-      17
-    ],
-    "700477f2": [
-      0,
+    "0625546e": [
       15
     ],
-    "6635f364": [
-      31,
+    "705c12e8": [
       16
     ],
-    "eee179d6": [
-      31,
-      16
+    "195c653a": [
+      24
     ],
-    "f5193c68": [
-      31,
-      16
+    "d58b2406": [
+      36
     ],
-    "12f4e272": [
-      31,
-      16
+    "4c86b04f": [
+      34
     ],
-    "313fc408": [
-      31,
-      16
+    "1650993a": [
+      27
     ],
-    "5cdb0ad3": [
-      31,
-      16
+    "3ddf6e1d": [
+      25
     ],
-    "328b12db": [
-      31,
-      16
+    "1c6557ac": [
+      35
     ],
-    "6b651ba7": [
-      31,
-      16
+    "75a40646": [
+      30
     ],
-    "4c85589b": [
-      31,
-      16
+    "68d8e388": [
+      26
     ],
-    "07e28e46": [
-      31,
-      16
+    "4a051872": [
+      33
     ],
-    "ddfa82e6": [
-      31,
-      16
+    "7f7fb284": [
+      31
     ],
-    "fb308e9c": [
-      31,
-      16
+    "74a7eade": [
+      23
     ],
-    "22bc5fae": [
-      31,
-      16
+    "35aeaf69": [
+      21
     ],
-    "873c0ac2": [
-      31,
-      16
+    "93493b92": [
+      22
     ],
-    "049ac1fd": [
-      31,
-      16
+    "e2f539c6": [
+      29
     ],
-    "684222df": [
-      31,
-      16
+    "c01f7f70": [
+      20
     ],
-    "bddbf048": [
-      31,
-      16
+    "319fb7e5": [
+      32
+    ],
+    "6118670a": [
+      1,
+      28
+    ],
+    "1f7df736": [
+      0,
+      18
+    ],
+    "23bc9071": [
+      37,
+      19
+    ],
+    "2e676dce": [
+      37,
+      19
+    ],
+    "3e3b8b48": [
+      37,
+      19
+    ],
+    "5f9445cb": [
+      37,
+      19
+    ],
+    "bfaf7110": [
+      37,
+      19
+    ],
+    "06309562": [
+      37,
+      19
+    ],
+    "06b66a42": [
+      37,
+      19
+    ],
+    "36fb37ba": [
+      37,
+      19
+    ],
+    "22b17574": [
+      37,
+      19
+    ],
+    "9ba2e26c": [
+      37,
+      19
+    ],
+    "169f109f": [
+      37,
+      19
+    ],
+    "33f7d84a": [
+      37,
+      19
+    ],
+    "5b1c7691": [
+      37,
+      19
+    ],
+    "7ae53c2e": [
+      37,
+      19
+    ],
+    "48f6edac": [
+      37,
+      19
+    ],
+    "435522ba": [
+      37,
+      19
+    ],
+    "57b2850e": [
+      37,
+      19
+    ],
+    "c20f8e3a": [
+      37,
+      19
+    ],
+    "506fc440": [
+      37,
+      19
     ]
   }
 }
