--- a/_packages/plugins/alias/package.json
+++ b/_packages/plugins/alias/package.json
@@ -8,6 +8,10 @@
     "src/*.js",
     "src/types.ts"
   ],
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "src/index.js",
   "devDependencies": {
     "@minipress/types": "*"
