--- a/_packages/plugins/summary-container/package.json
+++ b/_packages/plugins/summary-container/package.json
@@ -8,6 +8,10 @@
     "src/*.js",
     "src/types.ts"
   ],
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "src/index.js",
   "dependencies": {
     "@minipress/custom-container": "^0.1.1-alpha.22"
