--- a/_packages/plugins/component-documentation/package.json
+++ b/_packages/plugins/component-documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-component-documentation",
-  "version": "0.1.1-alpha.19",
+  "version": "0.1.1-alpha.23",
   "description": "my mathematical plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -17,16 +17,16 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/markdown": "^0.1.1-alpha.19",
-    "@minipress/custom-container": "^0.1.1-alpha.22",
-    "@minipress/utils": "^0.1.1-alpha.19",
-    "loader-utils": "^1.2.3",
+    "@minipress/custom-container": "^0.1.1-alpha.23",
+    "@minipress/markdown": "^0.1.1-alpha.23",
+    "@minipress/utils": "^0.1.1-alpha.23",
     "@vuese/markdown-render": "^2.5.1",
-    "@vuese/parser": "^2.4.1"
+    "@vuese/parser": "^2.4.1",
+    "loader-utils": "^1.2.3"
   },
   "devDependencies": {
     "@minipress/types": "*",
-    "jest": "^24.9.0",
-    "@types/jest": "^24.0.18"
+    "@types/jest": "^24.0.18",
+    "jest": "^24.9.0"
   }
 }
