--- a/_packages/plugins/summary-container/package.json
+++ b/_packages/plugins/summary-container/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-summary-container",
-  "version": "0.0.1",
+  "version": "0.1.1-alpha.23",
   "description": "my extraordinary plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -14,7 +14,7 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/custom-container": "^0.1.1-alpha.22"
+    "@minipress/custom-container": "^0.1.1-alpha.23"
   },
   "devDependencies": {
     "@minipress/types": "*"
