--- a/_packages/types/package.json
+++ b/_packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/types",
-  "version": "0.1.1-alpha.19",
+  "version": "0.1.1-alpha.23",
   "files": [
     "types/**/*.d.ts"
   ],
@@ -9,10 +9,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "webpack-chain": "^6.0.0",
     "@hapi/joi": "^16.1.5",
+    "@minipress/log": "^0.1.1-alpha.23",
     "@types/joi": "^14.3.3",
-    "@minipress/log": "^0.1.1-alpha.16"
+    "webpack-chain": "^6.0.0"
   },
   "types": "types/index.d.ts",
   "license": "ISC",
