--- a/_packages/utils/package.json
+++ b/_packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/utils",
-  "version": "0.1.1-alpha.19",
+  "version": "0.1.1-alpha.23",
   "description": "",
   "main": "src/index.js",
   "private": false,
@@ -20,8 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^3.2.1",
-    "hash-sum": "^2.0.0",
-    "devalue": "^2.0.0"
+    "devalue": "^2.0.0",
+    "hash-sum": "^2.0.0"
   },
   "types": "index.d.ts",
   "devDependencies": {
