--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -1,9 +1,8 @@
 {
   "publicPath": "/minipress/",
   "all": [
-    "30.style.css",
-    "9.style.css",
-    "assets/js/16.js",
+    "10.style.css",
+    "32.style.css",
     "assets/js/17.js",
     "assets/js/18.js",
     "assets/js/19.js",
@@ -18,9 +17,12 @@
     "assets/js/28.js",
     "assets/js/29.js",
     "assets/js/30.js",
+    "assets/js/31.js",
+    "assets/js/32.js",
     "assets/js/app.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
+    "assets/js/page--1852cd38.js",
     "assets/js/page--323ede5c.js",
     "assets/js/page--361ef137.js",
     "assets/js/page--43fa1dd0.js",
@@ -41,9 +43,8 @@
     "assets/js/app.js"
   ],
   "async": [
-    "30.style.css",
-    "9.style.css",
-    "assets/js/16.js",
+    "10.style.css",
+    "32.style.css",
     "assets/js/17.js",
     "assets/js/18.js",
     "assets/js/19.js",
@@ -58,8 +59,11 @@
     "assets/js/28.js",
     "assets/js/29.js",
     "assets/js/30.js",
+    "assets/js/31.js",
+    "assets/js/32.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
+    "assets/js/page--1852cd38.js",
     "assets/js/page--323ede5c.js",
     "assets/js/page--361ef137.js",
     "assets/js/page--43fa1dd0.js",
@@ -75,197 +79,200 @@
     "assets/js/page--e6d50b2e.js"
   ],
   "modules": {
+    "64933294": [
+      11
+    ],
     "95a9d01c": [
-      33,
-      17
+      35,
+      18
     ],
     "387ccf72": [
-      33,
-      17
+      35,
+      18
     ],
     "cbd4e166": [
-      33,
-      17
+      35,
+      18
     ],
     "426991fb": [
-      33,
-      17
+      35,
+      18
     ],
     "3762e6a4": [
-      33,
-      17
+      35,
+      18
     ],
     "5a35176c": [
-      33,
-      17
+      35,
+      18
     ],
     "4419de98": [
-      33,
-      17
+      35,
+      18
     ],
     "76a4ffe6": [
-      33,
-      17
+      35,
+      18
     ],
     "4f31d6cf": [
-      33,
-      17
+      35,
+      18
     ],
     "5636e580": [
-      33,
-      17
+      35,
+      18
     ],
     "0427a7ee": [
-      33,
-      17
+      35,
+      18
     ],
     "49ff7cb4": [
-      33,
-      17
+      35,
+      18
     ],
     "4336dca0": [
-      33,
-      17
+      35,
+      18
     ],
     "7ecbc547": [
-      33,
-      17
+      35,
+      18
     ],
     "324e940e": [
-      33,
-      17
+      35,
+      18
     ],
     "65752c25": [
-      33,
-      17
+      35,
+      18
     ],
     "381c336e": [
-      33,
-      17
+      35,
+      18
     ],
     "b4cbf296": [
-      33,
-      17
+      35,
+      18
     ],
     "8e2430c4": [
-      33,
-      17
+      35,
+      18
     ],
     "1adaa3ce": [
-      33,
-      17
+      35,
+      18
     ],
     "773510fa": [
-      33,
-      17
+      35,
+      18
     ],
     "030ce01d": [
-      33,
-      17
+      35,
+      18
     ],
     "4132c8a6": [
-      33,
-      17
+      35,
+      18
     ],
     "bba014b0": [
-      33,
-      17
+      35,
+      18
     ],
     "f4f1076a": [
-      33,
-      17
+      35,
+      18
     ],
     "fd34a40e": [
-      33,
-      17
+      35,
+      18
     ],
     "10842ce6": [
-      33,
-      17
+      35,
+      18
     ],
     "83513d70": [
-      33,
-      17
+      35,
+      18
     ],
     "754d63b2": [
-      33,
-      17
+      35,
+      18
     ],
     "c97683ea": [
-      33,
-      17
+      35,
+      18
     ],
     "4ddbe111": [
-      33,
-      17
+      35,
+      18
     ],
     "51324e7c": [
-      33,
-      17
+      35,
+      18
     ],
     "3ce84807": [
-      33,
-      17
+      35,
+      18
     ],
     "78ae8032": [
-      33,
-      17
+      35,
+      18
     ],
     "09debea4": [
-      33,
-      17
+      35,
+      18
     ],
     "5756a8de": [
-      33,
-      17
+      35,
+      18
     ],
     "f13fcc8a": [
-      33,
-      17
+      35,
+      18
     ],
     "2f7e4232": [
-      33,
-      17
+      35,
+      18
     ],
     "22ee0247": [
-      33,
-      17
+      35,
+      18
     ],
     "0cdda333": [
-      33,
-      17
+      35,
+      18
     ],
     "3a1ddae0": [
-      33,
-      17
+      35,
+      18
     ],
     "c7ead1e0": [
-      33,
-      17
+      35,
+      18
     ],
     "6933ec81": [
-      33,
-      17
+      35,
+      18
     ],
     "68a06702": [
-      33,
-      17
+      35,
+      18
     ],
     "5963f189": [
-      33,
-      17
+      35,
+      18
     ],
     "02025afe": [
-      33,
-      17
+      35,
+      18
     ],
     "76d094f0": [
-      33,
-      17
+      35,
+      18
     ],
     "8b285d1a": [
-      33,
-      17
+      35,
+      18
     ],
     "e22aaee4": [
       2
@@ -321,35 +328,41 @@
     "23c328c6": [
       10
     ],
-    "253188fd": [
+    "3cc3d6eb": [
       11
+    ],
+    "3ff3ebe0": [
+      11
+    ],
+    "253188fd": [
+      12
     ],
     "d2bf829c": [
-      11
+      12
     ],
     "4668791e": [
-      12
+      13
     ],
     "cd987748": [
-      12
+      13
     ],
     "8fe2fa6a": [
-      13
+      14
     ],
     "b16f2e94": [
-      13
+      14
     ],
     "bb34b784": [
-      14
+      15
     ],
     "069c561a": [
-      14
+      15
     ],
     "3e4b0683": [
-      15
+      16
     ],
     "de0c0224": [
-      15
+      16
     ],
     "3e898de9": [
       2
@@ -405,35 +418,41 @@
     "3d9e72d6": [
       10
     ],
-    "795caa79": [
+    "679bf7ba": [
       11
+    ],
+    "50b54559": [
+      11
+    ],
+    "795caa79": [
+      12
     ],
     "31c2dbeb": [
-      11
-    ],
-    "0c009cbd": [
       12
+    ],
+    "8c2dd060": [
+      13
     ],
     "fe58e15a": [
-      12
+      13
     ],
     "44ec401c": [
-      13
+      14
     ],
     "82a7bca6": [
-      13
+      14
     ],
     "c202ecb6": [
-      14
+      15
     ],
     "394d83ac": [
-      14
+      15
     ],
     "303c55f0": [
-      15
+      16
     ],
     "76ccb136": [
-      15
+      16
     ],
     "40606ad2": [
       2
@@ -463,145 +482,148 @@
       10
     ],
     "0a03fe88": [
-      11
-    ],
-    "1eaeb9fa": [
       12
     ],
-    "3e6e0454": [
+    "1eaeb9fa": [
       13
     ],
-    "0625546e": [
+    "3e6e0454": [
       14
     ],
-    "705c12e8": [
+    "0625546e": [
       15
     ],
+    "705c12e8": [
+      16
+    ],
     "195c653a": [
-      22
-    ],
-    "d58b2406": [
-      32
-    ],
-    "4c86b04f": [
-      31
-    ],
-    "1650993a": [
-      25
-    ],
-    "3ddf6e1d": [
-      23
-    ],
-    "68d8e388": [
       24
     ],
+    "d58b2406": [
+      34
+    ],
+    "4c86b04f": [
+      33
+    ],
+    "1650993a": [
+      27
+    ],
+    "3ddf6e1d": [
+      25
+    ],
+    "68d8e388": [
+      26
+    ],
     "4a051872": [
-      30
+      32
     ],
     "7f7fb284": [
-      28
+      30
     ],
     "74a7eade": [
+      23
+    ],
+    "2f6d660a": [
       21
     ],
     "35aeaf69": [
-      19
-    ],
-    "93493b92": [
       20
     ],
+    "93493b92": [
+      22
+    ],
     "e2f539c6": [
-      27
-    ],
-    "c01f7f70": [
-      18
-    ],
-    "319fb7e5": [
       29
     ],
+    "c01f7f70": [
+      19
+    ],
+    "319fb7e5": [
+      31
+    ],
     "6118670a": [
-      1,
-      26
+      0,
+      28
     ],
     "1f7df736": [
-      0,
-      16
+      1,
+      17
     ],
     "23bc9071": [
-      33,
-      17
+      35,
+      18
     ],
     "2e676dce": [
-      33,
-      17
+      35,
+      18
     ],
     "3e3b8b48": [
-      33,
-      17
+      35,
+      18
     ],
     "5f9445cb": [
-      33,
-      17
+      35,
+      18
     ],
     "bfaf7110": [
-      33,
-      17
+      35,
+      18
     ],
     "06309562": [
-      33,
-      17
+      35,
+      18
     ],
     "06b66a42": [
-      33,
-      17
+      35,
+      18
     ],
     "36fb37ba": [
-      33,
-      17
+      35,
+      18
     ],
     "22b17574": [
-      33,
-      17
+      35,
+      18
     ],
     "9ba2e26c": [
-      33,
-      17
+      35,
+      18
     ],
     "169f109f": [
-      33,
-      17
+      35,
+      18
     ],
     "33f7d84a": [
-      33,
-      17
+      35,
+      18
     ],
     "5b1c7691": [
-      33,
-      17
+      35,
+      18
     ],
     "facd8d64": [
-      33,
-      17
+      35,
+      18
     ],
     "48f6edac": [
-      33,
-      17
+      35,
+      18
     ],
     "435522ba": [
-      33,
-      17
+      35,
+      18
     ],
     "57b2850e": [
-      33,
-      17
+      35,
+      18
     ],
     "c20f8e3a": [
-      33,
-      17
+      35,
+      18
     ],
     "506fc440": [
-      33,
-      17
+      35,
+      18
     ]
   }
 }
