--- a/_examples/extend-cli/package.json
+++ b/_examples/extend-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/example-extend-cli",
-  "version": "1.0.0",
+  "version": "0.1.1-alpha.24",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@minipress/minipress": "^0.1.1-alpha.23"
+    "@minipress/minipress": "^0.1.1-alpha.24"
   }
 }
