--- a/_packages/cli/package.json
+++ b/_packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/cli",
-  "version": "0.1.1-alpha.23",
+  "version": "0.1.1-alpha.24",
   "description": "",
   "main": "src/index.js",
   "types": "index.d.ts",
@@ -13,5 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "cac": "^6.5.3"
-  }
+  },
+  "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
 }
