--- a/_packages/plugins/command-serve/package.json
+++ b/_packages/plugins/command-serve/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-command-serve",
-  "version": "0.1.1-alpha.23",
+  "version": "0.1.1-alpha.24",
   "description": "my cool plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -20,5 +20,6 @@
   "devDependencies": {
     "@minipress/types": "*",
     "@types/express": "^4.17.1"
-  }
+  },
+  "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
 }
