--- a/_packages/plugins/deploy-to-gh-pages/package.json
+++ b/_packages/plugins/deploy-to-gh-pages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-deploy-to-gh-pages",
-  "version": "0.1.1-alpha.23",
+  "version": "0.1.1-alpha.24",
   "description": "my cool plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -18,5 +18,6 @@
   },
   "devDependencies": {
     "@minipress/types": "*"
-  }
+  },
+  "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
 }
