--- a/_support/type-check/package.json
+++ b/_support/type-check/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/type-check",
-  "version": "0.1.1-alpha.23",
+  "version": "0.1.1-alpha.24",
   "description": "",
   "main": "index.js",
   "scripts": {},
@@ -18,5 +18,6 @@
     "execa": "^2.0.4",
     "gh-pages": "^2.1.1",
     "ora": "^4.0.2"
-  }
+  },
+  "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
 }
