--- a/_packages/plugins/head/package.json
+++ b/_packages/plugins/head/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-head",
-  "version": "0.1.1-alpha.25",
+  "version": "0.1.1-alpha.26",
   "description": "",
   "main": "src/index.js",
   "scripts": {},
@@ -8,8 +8,8 @@
   "author": "",
   "private": false,
   "devDependencies": {
-    "@minipress/types": "*",
-    "@minipress/head-element": "^0.1.1-alpha.25"
+    "@minipress/head-element": "^0.1.1-alpha.26",
+    "@minipress/types": "*"
   },
   "publishConfig": {
     "access": "public"
