--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -1,9 +1,8 @@
 {
   "publicPath": "/minipress/",
   "all": [
-    "10.style.css",
-    "32.style.css",
-    "assets/js/17.js",
+    "11.style.css",
+    "34.style.css",
     "assets/js/18.js",
     "assets/js/19.js",
     "assets/js/20.js",
@@ -19,10 +18,13 @@
     "assets/js/30.js",
     "assets/js/31.js",
     "assets/js/32.js",
+    "assets/js/33.js",
+    "assets/js/34.js",
     "assets/js/app.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
     "assets/js/page--1852cd38.js",
+    "assets/js/page--19bad4e0.js",
     "assets/js/page--323ede5c.js",
     "assets/js/page--361ef137.js",
     "assets/js/page--43fa1dd0.js",
@@ -43,9 +45,8 @@
     "assets/js/app.js"
   ],
   "async": [
-    "10.style.css",
-    "32.style.css",
-    "assets/js/17.js",
+    "11.style.css",
+    "34.style.css",
     "assets/js/18.js",
     "assets/js/19.js",
     "assets/js/20.js",
@@ -61,9 +62,12 @@
     "assets/js/30.js",
     "assets/js/31.js",
     "assets/js/32.js",
+    "assets/js/33.js",
+    "assets/js/34.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
     "assets/js/page--1852cd38.js",
+    "assets/js/page--19bad4e0.js",
     "assets/js/page--323ede5c.js",
     "assets/js/page--361ef137.js",
     "assets/js/page--43fa1dd0.js",
@@ -82,197 +86,200 @@
     "64933294": [
       11
     ],
+    "79190240": [
+      16
+    ],
     "95a9d01c": [
-      35,
-      18
+      37,
+      19
     ],
     "387ccf72": [
-      35,
-      18
+      37,
+      19
     ],
     "cbd4e166": [
-      35,
-      18
+      37,
+      19
     ],
     "426991fb": [
-      35,
-      18
+      37,
+      19
     ],
     "3762e6a4": [
-      35,
-      18
+      37,
+      19
     ],
     "5a35176c": [
-      35,
-      18
+      37,
+      19
     ],
     "4419de98": [
-      35,
-      18
+      37,
+      19
     ],
     "76a4ffe6": [
-      35,
-      18
+      37,
+      19
     ],
     "4f31d6cf": [
-      35,
-      18
+      37,
+      19
     ],
     "5636e580": [
-      35,
-      18
+      37,
+      19
     ],
     "0427a7ee": [
-      35,
-      18
+      37,
+      19
     ],
     "49ff7cb4": [
-      35,
-      18
+      37,
+      19
     ],
     "4336dca0": [
-      35,
-      18
+      37,
+      19
     ],
     "7ecbc547": [
-      35,
-      18
+      37,
+      19
     ],
     "324e940e": [
-      35,
-      18
+      37,
+      19
     ],
     "65752c25": [
-      35,
-      18
+      37,
+      19
     ],
     "381c336e": [
-      35,
-      18
+      37,
+      19
     ],
     "b4cbf296": [
-      35,
-      18
+      37,
+      19
     ],
     "8e2430c4": [
-      35,
-      18
+      37,
+      19
     ],
     "1adaa3ce": [
-      35,
-      18
+      37,
+      19
     ],
     "773510fa": [
-      35,
-      18
+      37,
+      19
     ],
     "030ce01d": [
-      35,
-      18
+      37,
+      19
     ],
     "4132c8a6": [
-      35,
-      18
+      37,
+      19
     ],
     "bba014b0": [
-      35,
-      18
+      37,
+      19
     ],
     "f4f1076a": [
-      35,
-      18
+      37,
+      19
     ],
     "fd34a40e": [
-      35,
-      18
+      37,
+      19
     ],
     "10842ce6": [
-      35,
-      18
+      37,
+      19
     ],
     "83513d70": [
-      35,
-      18
+      37,
+      19
     ],
     "754d63b2": [
-      35,
-      18
+      37,
+      19
     ],
     "c97683ea": [
-      35,
-      18
+      37,
+      19
     ],
     "4ddbe111": [
-      35,
-      18
+      37,
+      19
     ],
     "51324e7c": [
-      35,
-      18
+      37,
+      19
     ],
     "3ce84807": [
-      35,
-      18
+      37,
+      19
     ],
     "78ae8032": [
-      35,
-      18
+      37,
+      19
     ],
     "09debea4": [
-      35,
-      18
+      37,
+      19
     ],
     "5756a8de": [
-      35,
-      18
+      37,
+      19
     ],
     "f13fcc8a": [
-      35,
-      18
+      37,
+      19
     ],
     "2f7e4232": [
-      35,
-      18
+      37,
+      19
     ],
     "22ee0247": [
-      35,
-      18
+      37,
+      19
     ],
     "0cdda333": [
-      35,
-      18
+      37,
+      19
     ],
     "3a1ddae0": [
-      35,
-      18
+      37,
+      19
     ],
     "c7ead1e0": [
-      35,
-      18
+      37,
+      19
     ],
     "6933ec81": [
-      35,
-      18
+      37,
+      19
     ],
     "68a06702": [
-      35,
-      18
+      37,
+      19
     ],
     "5963f189": [
-      35,
-      18
+      37,
+      19
     ],
     "02025afe": [
-      35,
-      18
+      37,
+      19
     ],
     "76d094f0": [
-      35,
-      18
+      37,
+      19
     ],
     "8b285d1a": [
-      35,
-      18
+      37,
+      19
     ],
     "e22aaee4": [
       2
@@ -358,11 +365,14 @@
     "069c561a": [
       15
     ],
-    "3e4b0683": [
+    "69274e2b": [
       16
     ],
+    "3e4b0683": [
+      17
+    ],
     "de0c0224": [
-      16
+      17
     ],
     "3e898de9": [
       2
@@ -430,7 +440,7 @@
     "31c2dbeb": [
       12
     ],
-    "5b82c6b2": [
+    "aea96ed0": [
       13
     ],
     "fe58e15a": [
@@ -448,11 +458,17 @@
     "394d83ac": [
       15
     ],
-    "303c55f0": [
+    "693f52bb": [
       16
     ],
-    "76ccb136": [
+    "5d3bdd19": [
       16
+    ],
+    "303c55f0": [
+      17
+    ],
+    "76ccb136": [
+      17
     ],
     "40606ad2": [
       2
@@ -493,137 +509,143 @@
     "0625546e": [
       15
     ],
-    "705c12e8": [
+    "2b2706b6": [
       16
     ],
+    "705c12e8": [
+      17
+    ],
     "195c653a": [
-      24
-    ],
-    "d58b2406": [
-      34
-    ],
-    "4c86b04f": [
-      33
-    ],
-    "1650993a": [
-      27
-    ],
-    "3ddf6e1d": [
-      25
-    ],
-    "68d8e388": [
       26
     ],
-    "4a051872": [
-      32
+    "d58b2406": [
+      36
     ],
-    "7f7fb284": [
-      30
+    "4c86b04f": [
+      35
     ],
-    "74a7eade": [
-      23
-    ],
-    "2f6d660a": [
-      21
-    ],
-    "35aeaf69": [
-      20
-    ],
-    "93493b92": [
-      22
-    ],
-    "e2f539c6": [
+    "1650993a": [
       29
     ],
+    "3ddf6e1d": [
+      27
+    ],
+    "68d8e388": [
+      28
+    ],
+    "4a051872": [
+      34
+    ],
+    "7f7fb284": [
+      32
+    ],
+    "74a7eade": [
+      25
+    ],
+    "2f6d660a": [
+      22
+    ],
+    "35aeaf69": [
+      21
+    ],
+    "93493b92": [
+      24
+    ],
+    "e2f539c6": [
+      31
+    ],
     "c01f7f70": [
-      19
+      20
+    ],
+    "38ecacfb": [
+      23
     ],
     "319fb7e5": [
-      31
+      33
     ],
     "6118670a": [
       0,
-      28
+      30
     ],
     "1f7df736": [
       1,
-      17
+      18
     ],
     "23bc9071": [
-      35,
-      18
+      37,
+      19
     ],
     "2e676dce": [
-      35,
-      18
+      37,
+      19
     ],
     "3e3b8b48": [
-      35,
-      18
+      37,
+      19
     ],
     "5f9445cb": [
-      35,
-      18
+      37,
+      19
     ],
     "bfaf7110": [
-      35,
-      18
+      37,
+      19
     ],
     "06309562": [
-      35,
-      18
+      37,
+      19
     ],
     "06b66a42": [
-      35,
-      18
+      37,
+      19
     ],
     "36fb37ba": [
-      35,
-      18
+      37,
+      19
     ],
     "22b17574": [
-      35,
-      18
+      37,
+      19
     ],
     "9ba2e26c": [
-      35,
-      18
+      37,
+      19
     ],
     "169f109f": [
-      35,
-      18
+      37,
+      19
     ],
     "33f7d84a": [
-      35,
-      18
+      37,
+      19
     ],
     "5b1c7691": [
-      35,
-      18
+      37,
+      19
     ],
     "facd8d64": [
-      35,
-      18
+      37,
+      19
     ],
     "48f6edac": [
-      35,
-      18
+      37,
+      19
     ],
     "435522ba": [
-      35,
-      18
+      37,
+      19
     ],
     "57b2850e": [
-      35,
-      18
+      37,
+      19
     ],
     "c20f8e3a": [
-      35,
-      18
+      37,
+      19
     ],
     "506fc440": [
-      35,
-      18
+      37,
+      19
     ]
   }
 }
