--- a/_examples/features/package.json
+++ b/_examples/features/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/example-features",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "main": "index.js",
   "license": "MIT",
   "private": false,
@@ -20,11 +20,11 @@
     "!.DS_Store"
   ],
   "dependencies": {
-    "@minipress/minipress": "^0.1.1-alpha.26",
-    "@minipress/plugin-additional-pages": "^0.1.1-alpha.26",
-    "@minipress/plugin-clean-urls": "^0.1.1-alpha.26",
-    "@minipress/plugin-component-documentation": "^0.1.1-alpha.26",
-    "@minipress/theme-docs": "^0.1.1-alpha.26"
+    "@minipress/minipress": "^0.2.0",
+    "@minipress/plugin-additional-pages": "^0.2.0",
+    "@minipress/plugin-clean-urls": "^0.2.0",
+    "@minipress/plugin-component-documentation": "^0.2.0",
+    "@minipress/theme-docs": "^0.2.0"
   },
   "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
 }
