--- a/_packages/code-gen/package.json
+++ b/_packages/code-gen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/code-gen",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "keywords": [],
