--- a/_packages/head-element/package.json
+++ b/_packages/head-element/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/head-element",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "private": false,
   "dependencies": {
-    "@minipress/code-gen": "^0.1.1-alpha.26"
+    "@minipress/code-gen": "^0.2.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
