--- a/_packages/markdown/package.json
+++ b/_packages/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/markdown",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@minipress/utils": "^0.1.1-alpha.26",
+    "@minipress/utils": "^0.2.0",
     "gray-matter": "^4.0.2",
     "markdown-it-container": "^2.0.0",
     "prismjs": "^1.17.1",
@@ -26,7 +26,7 @@
     "slugo": "^0.3.1"
   },
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.26",
+    "@minipress/types": "^0.2.0",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
   },
