--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/minipress",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "main": "src/index.js",
   "license": "MIT",
   "private": false,
@@ -25,23 +25,23 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@hapi/joi": "^16.1.7",
-    "@minipress/app": "^0.1.1-alpha.26",
-    "@minipress/cli": "^0.1.1-alpha.26",
-    "@minipress/code-gen": "^0.1.1-alpha.26",
-    "@minipress/head-element": "^0.1.1-alpha.26",
-    "@minipress/log": "^0.1.1-alpha.26",
-    "@minipress/plugin-alias": "^0.1.1-alpha.26",
-    "@minipress/plugin-built-in-components": "^0.1.1-alpha.26",
-    "@minipress/plugin-command-dev": "^0.1.1-alpha.26",
-    "@minipress/plugin-command-generate": "^0.1.1-alpha.26",
-    "@minipress/plugin-command-serve": "^0.1.1-alpha.26",
-    "@minipress/plugin-components": "^0.1.1-alpha.26",
-    "@minipress/plugin-format-markdown": "^0.1.1-alpha.26",
-    "@minipress/plugin-format-vue": "^0.1.1-alpha.26",
-    "@minipress/plugin-layouts": "^0.1.1-alpha.26",
-    "@minipress/plugin-pages": "^0.1.1-alpha.26",
-    "@minipress/theme-default": "^0.1.1-alpha.26",
-    "@minipress/utils": "^0.1.1-alpha.26",
+    "@minipress/app": "^0.2.0",
+    "@minipress/cli": "^0.2.0",
+    "@minipress/code-gen": "^0.2.0",
+    "@minipress/head-element": "^0.2.0",
+    "@minipress/log": "^0.2.0",
+    "@minipress/plugin-alias": "^0.2.0",
+    "@minipress/plugin-built-in-components": "^0.2.0",
+    "@minipress/plugin-command-dev": "^0.2.0",
+    "@minipress/plugin-command-generate": "^0.2.0",
+    "@minipress/plugin-command-serve": "^0.2.0",
+    "@minipress/plugin-components": "^0.2.0",
+    "@minipress/plugin-format-markdown": "^0.2.0",
+    "@minipress/plugin-format-vue": "^0.2.0",
+    "@minipress/plugin-layouts": "^0.2.0",
+    "@minipress/plugin-pages": "^0.2.0",
+    "@minipress/theme-default": "^0.2.0",
+    "@minipress/utils": "^0.2.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "core-js": "^2.6.5",
@@ -99,8 +99,8 @@
     "webpackbar": "^4.0.0"
   },
   "devDependencies": {
-    "@minipress/eslint-config-node": "^0.1.1-alpha.26",
-    "@minipress/types": "^0.1.1-alpha.26",
+    "@minipress/eslint-config-node": "^0.2.0",
+    "@minipress/types": "^0.2.0",
     "@types/fs-extra": "^8.0.1",
     "@types/hapi__joi": "^16.0.1",
     "@types/hash-sum": "^1.0.0",
