--- a/_packages/plugins/additional-pages/package.json
+++ b/_packages/plugins/additional-pages/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@minipress/plugin-additional-pages",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {},
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.26"
+    "@minipress/types": "^0.2.0"
   },
   "files": [
     "src/**/*"
