--- a/_packages/plugins/command-generate/package.json
+++ b/_packages/plugins/command-generate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-command-generate",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "my cool plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
