--- a/_packages/plugins/component-documentation/package.json
+++ b/_packages/plugins/component-documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-component-documentation",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "my mathematical plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -17,9 +17,9 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/custom-container": "^0.1.1-alpha.26",
-    "@minipress/markdown": "^0.1.1-alpha.26",
-    "@minipress/utils": "^0.1.1-alpha.26",
+    "@minipress/custom-container": "^0.2.0",
+    "@minipress/markdown": "^0.2.0",
+    "@minipress/utils": "^0.2.0",
     "@vuese/markdown-render": "^2.5.3",
     "@vuese/parser": "^2.4.3",
     "loader-utils": "^1.2.3"
