--- a/_packages/plugins/format-markdown/package.json
+++ b/_packages/plugins/format-markdown/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@minipress/plugin-format-markdown",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/code-gen": "^0.1.1-alpha.26",
-    "@minipress/markdown": "^0.1.1-alpha.26",
-    "@minipress/utils": "^0.1.1-alpha.26"
+    "@minipress/code-gen": "^0.2.0",
+    "@minipress/markdown": "^0.2.0",
+    "@minipress/utils": "^0.2.0"
   },
   "files": [
     "src/**/*"
   ],
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.26",
+    "@minipress/types": "^0.2.0",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
   },
