--- a/_packages/plugins/head/package.json
+++ b/_packages/plugins/head/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-head",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {},
@@ -8,7 +8,7 @@
   "author": "",
   "private": false,
   "devDependencies": {
-    "@minipress/head-element": "^0.1.1-alpha.26",
+    "@minipress/head-element": "^0.2.0",
     "@minipress/types": "*"
   },
   "publishConfig": {
