--- a/_packages/plugins/last-modified/package.json
+++ b/_packages/plugins/last-modified/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-last-modified",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "private": false,
   "publishConfig": {
