--- a/_packages/plugins/package-json/package.json
+++ b/_packages/plugins/package-json/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@minipress/plugin-package-json",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "dependencies": {
     "fs-extra": "^8.1.0"
   },
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.26",
+    "@minipress/types": "^0.2.0",
     "@types/fs-extra": "^8.0.1"
   },
   "files": [
