--- a/_packages/plugins/pages/package.json
+++ b/_packages/plugins/pages/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@minipress/plugin-pages",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "jest ."
   },
   "dependencies": {
-    "@minipress/utils": "^0.1.1-alpha.26",
+    "@minipress/utils": "^0.2.0",
     "chokidar": "^3.2.2",
     "globby": "^10.0.1"
   },
@@ -15,7 +15,7 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.26",
+    "@minipress/types": "^0.2.0",
     "@types/fs-extra": "^8.0.1",
     "@types/jest": "^24.0.18",
     "fs-extra": "^8.1.0",
