--- a/_packages/plugins/serve-static/package.json
+++ b/_packages/plugins/serve-static/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-serve-static",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "my cool plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -14,7 +14,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/utils": "^0.1.1-alpha.26",
+    "@minipress/utils": "^0.2.0",
     "fs-extra": "^8.1.0",
     "serve-static": "^1.14.1"
   },
