--- a/_packages/plugins/theme-docs/package.json
+++ b/_packages/plugins/theme-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/theme-docs",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve demo",
@@ -21,10 +21,10 @@
     "src/**/*"
   ],
   "dependencies": {
-    "@minipress/custom-container": "^0.1.1-alpha.26"
+    "@minipress/custom-container": "^0.2.0"
   },
   "devDependencies": {
-    "@minipress/eslint-config-client": "^0.1.1-alpha.26",
+    "@minipress/eslint-config-client": "^0.2.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-plugin-unit-jest": "^3.11.0",
