--- a/_support/type-check/package.json
+++ b/_support/type-check/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/type-check",
-  "version": "0.1.1-alpha.26",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {},
