--- a/_packages/plugins/built-in-components/package.json
+++ b/_packages/plugins/built-in-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-built-in-components",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": false,
   "publishConfig": {
     "access": "public"
@@ -27,7 +27,13 @@
   "devDependencies": {
     "@minipress/eslint-config-client": "^0.2.0",
     "@minipress/types": "^0.2.0",
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-plugin-unit-jest": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "~7.0.0-bridge.0",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "core-js": "^2.6.5",
     "eslint": "^6.5.1",
@@ -35,14 +41,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-router-prefetch": "^1.6.0",
-    "vuex": "^3.1.1",
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-plugin-unit-jest": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1"
   },
   "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
 }
