chore: added basic travis integration

--- a/_packages/head-element/package.json
+++ b/_packages/head-element/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest ."
+    "test": "jest --clearCache && jest ."
   },
   "private": false,
   "dependencies": {
