feat: added more ways to configure plugins

--- a/_packages/markdown/package.json
+++ b/_packages/markdown/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest ."
+    "test": "jest --clearCache && jest ."
   },
   "files": [
     "src/**/*.js"
