--- a/_packages/plugins/pages/package.json
+++ b/_packages/plugins/pages/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest ."
+    "test": "jest --clearCache && jest ."
   },
   "dependencies": {
     "@minipress/utils": "^0.2.0",
