--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -2,9 +2,18 @@
   "name": "@minipress/plugin-components",
   "version": "0.4.0",
   "description": "",
+  "scripts": {
+    "test": "jest --clearCache && jest ."
+  },
   "main": "src/index.js",
   "dependencies": {
-    "chokidar": "^3.2.2"
+    "chokidar": "^3.2.2",
+    "@minipress/utils": "^0.4.0"
+  },
+  "devDependencies": {
+    "@minipress/types": "^0.4.0",
+    "jest": "^24.9.0",
+    "@types/jest": "^24.0.19"
   },
   "private": false,
   "publishConfig": {
