--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -1,13 +1,14 @@
 {
   "publicPath": "/minipress/",
   "all": [
-    "14.style.css",
+    "15.style.css",
     "5.style.css",
     "assets/js/10.js",
     "assets/js/11.js",
     "assets/js/12.js",
     "assets/js/13.js",
     "assets/js/14.js",
+    "assets/js/15.js",
     "assets/js/8.js",
     "assets/js/9.js",
     "assets/js/app.js",
@@ -25,13 +26,14 @@
     "assets/js/app.js"
   ],
   "async": [
-    "14.style.css",
+    "15.style.css",
     "5.style.css",
     "assets/js/10.js",
     "assets/js/11.js",
     "assets/js/12.js",
     "assets/js/13.js",
     "assets/js/14.js",
+    "assets/js/15.js",
     "assets/js/8.js",
     "assets/js/9.js",
     "assets/js/page--323ede5c.js",
@@ -44,388 +46,427 @@
   ],
   "modules": {
     "95a9d01c": [
-      17,
-      9
+      18,
+      10
     ],
     "387ccf72": [
-      17,
-      9
+      18,
+      10
     ],
     "cbd4e166": [
-      17,
-      9
+      18,
+      10
     ],
     "426991fb": [
-      17,
-      9
+      18,
+      10
     ],
     "3762e6a4": [
-      17,
-      9
+      18,
+      10
     ],
     "5a35176c": [
-      17,
-      9
+      18,
+      10
     ],
     "4419de98": [
-      17,
-      9
+      18,
+      10
     ],
     "76a4ffe6": [
-      17,
-      9
+      18,
+      10
     ],
     "4f31d6cf": [
-      17,
-      9
+      18,
+      10
     ],
     "60a624f9": [
-      17,
-      9
+      18,
+      10
     ],
     "0427a7ee": [
-      17,
-      9
+      18,
+      10
     ],
     "49ff7cb4": [
-      17,
-      9
+      18,
+      10
     ],
     "4336dca0": [
-      17,
-      9
+      18,
+      10
     ],
     "7ecbc547": [
-      17,
-      9
+      18,
+      10
     ],
     "bb2f4c5a": [
-      17,
-      9
+      18,
+      10
     ],
     "65752c25": [
-      17,
-      9
+      18,
+      10
     ],
     "381c336e": [
-      17,
-      9
+      18,
+      10
     ],
     "b4cbf296": [
-      17,
-      9
+      18,
+      10
     ],
     "8e2430c4": [
-      17,
-      9
+      18,
+      10
     ],
     "1adaa3ce": [
-      17,
-      9
+      18,
+      10
     ],
     "773510fa": [
-      17,
-      9
+      18,
+      10
+    ],
+    "db1e37cc": [
+      18,
+      10
+    ],
+    "07fb228a": [
+      18,
+      10
     ],
     "030ce01d": [
-      17,
-      9
+      18,
+      10
     ],
     "4132c8a6": [
-      17,
-      9
+      18,
+      10
     ],
     "bba014b0": [
-      17,
-      9
+      18,
+      10
     ],
     "f4f1076a": [
-      17,
-      9
+      18,
+      10
     ],
     "fd34a40e": [
-      17,
-      9
+      18,
+      10
     ],
     "10842ce6": [
-      17,
-      9
+      18,
+      10
     ],
     "83513d70": [
-      17,
-      9
+      18,
+      10
     ],
     "754d63b2": [
-      17,
-      9
+      18,
+      10
     ],
     "c97683ea": [
-      17,
-      9
+      18,
+      10
     ],
     "4ddbe111": [
-      17,
-      9
+      18,
+      10
     ],
     "3c53cf8a": [
-      17,
-      9
+      18,
+      10
     ],
     "3ce84807": [
-      17,
-      9
+      18,
+      10
     ],
     "78ae8032": [
-      17,
-      9
+      18,
+      10
     ],
     "09debea4": [
-      17,
-      9
+      18,
+      10
     ],
     "5756a8de": [
-      17,
-      9
+      18,
+      10
     ],
     "42efbd95": [
-      17,
-      9
+      18,
+      10
     ],
     "2f7e4232": [
-      17,
-      9
+      18,
+      10
     ],
     "22ee0247": [
-      17,
-      9
+      18,
+      10
     ],
     "0cdda333": [
-      17,
-      9
+      18,
+      10
     ],
     "3a1ddae0": [
-      17,
-      9
+      18,
+      10
     ],
     "c7ead1e0": [
-      17,
-      9
+      18,
+      10
     ],
     "6933ec81": [
-      17,
-      9
+      18,
+      10
+    ],
+    "7c6d0c90": [
+      18,
+      10
+    ],
+    "5b5fbe85": [
+      18,
+      10
     ],
     "68a06702": [
-      17,
-      9
+      18,
+      10
     ],
     "5963f189": [
-      17,
-      9
+      18,
+      10
     ],
     "02025afe": [
-      17,
-      9
+      18,
+      10
     ],
     "76d094f0": [
-      17,
-      9
+      18,
+      10
     ],
     "8b285d1a": [
-      17,
-      9
+      18,
+      10
+    ],
+    "09eab40d": [
+      8
+    ],
+    "1c03377c": [
+      8
     ],
     "e22aaee4": [
-      7
+      9
     ],
     "ca94520e": [
-      7
+      9
     ],
     "f93372aa": [
-      8
+      2
     ],
     "2a7013d6": [
-      8
+      2
     ],
     "e2f373d2": [
-      2
+      3
     ],
     "3eb5aa0c": [
-      2
+      3
     ],
     "cef0b076": [
-      3
+      4
     ],
     "5e2cdeb0": [
-      3
+      4
     ],
     "7da7f8ee": [
-      4
+      5
     ],
     "43852c7e": [
-      4
+      5
     ],
     "4668791e": [
-      5
+      6
     ],
     "cd987748": [
-      5
+      6
+    ],
+    "c21863e0": [
+      8
+    ],
+    "4e653eeb": [
+      8
     ],
     "3e898de9": [
-      7
+      9
     ],
     "7fb9e770": [
-      7
+      9
     ],
     "a5f71024": [
-      8
+      2
     ],
     "4459b68d": [
-      8
+      2
     ],
     "ed437b88": [
-      2
+      3
     ],
     "71b86e85": [
-      2
+      3
     ],
     "33b80fbb": [
-      3
+      4
     ],
     "065c61b2": [
-      3
+      4
     ],
     "7efaced6": [
-      4
+      5
     ],
     "1c669a12": [
-      4
-    ],
-    "a42b487e": [
       5
+    ],
+    "416499f4": [
+      6
     ],
     "fe58e15a": [
-      5
+      6
     ],
-    "40606ad2": [
-      7
-    ],
-    "cd07c518": [
+    "695f3d38": [
       8
     ],
-    "5d5548e2": [
+    "40606ad2": [
+      9
+    ],
+    "cd07c518": [
       2
     ],
-    "e7e4d964": [
+    "5d5548e2": [
       3
     ],
-    "f3b2cd58": [
+    "e7e4d964": [
       4
     ],
-    "1eaeb9fa": [
+    "f3b2cd58": [
       5
     ],
+    "1eaeb9fa": [
+      6
+    ],
     "195c653a": [
-      11
-    ],
-    "d58b2406": [
-      16
-    ],
-    "4c86b04f": [
-      15
-    ],
-    "1650993a": [
-      13
-    ],
-    "3ddf6e1d": [
       12
     ],
+    "d58b2406": [
+      17
+    ],
+    "4c86b04f": [
+      16
+    ],
+    "1650993a": [
+      14
+    ],
+    "3ddf6e1d": [
+      13
+    ],
     "93493b92": [
-      10
+      11
     ],
     "6118670a": [
       1,
-      14
+      15
     ],
     "1f7df736": [
       0,
-      6
+      7
     ],
     "23bc9071": [
-      17,
-      9
+      18,
+      10
+    ],
+    "ddd0a936": [
+      18,
+      10
     ],
     "2e676dce": [
-      17,
-      9
+      18,
+      10
     ],
     "3e3b8b48": [
-      17,
-      9
+      18,
+      10
     ],
     "5f9445cb": [
-      17,
-      9
+      18,
+      10
     ],
     "bfaf7110": [
-      17,
-      9
+      18,
+      10
     ],
     "06309562": [
-      17,
-      9
+      18,
+      10
     ],
     "06b66a42": [
-      17,
-      9
+      18,
+      10
     ],
     "bfdbf006": [
-      17,
-      9
+      18,
+      10
     ],
     "22b17574": [
-      17,
-      9
+      18,
+      10
     ],
     "9ba2e26c": [
-      17,
-      9
+      18,
+      10
+    ],
+    "bff5e8a0": [
+      18,
+      10
     ],
     "169f109f": [
-      17,
-      9
+      18,
+      10
     ],
     "33f7d84a": [
-      17,
-      9
+      18,
+      10
     ],
     "5b1c7691": [
-      17,
-      9
+      18,
+      10
     ],
     "facd8d64": [
-      17,
-      9
+      18,
+      10
     ],
     "34186eba": [
-      17,
-      9
+      18,
+      10
     ],
     "435522ba": [
-      17,
-      9
+      18,
+      10
     ],
     "57b2850e": [
-      17,
-      9
+      18,
+      10
     ],
     "c20f8e3a": [
-      17,
-      9
+      18,
+      10
     ],
     "506fc440": [
-      17,
-      9
+      18,
+      10
     ]
   }
 }
