--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "helloworld:debug": "cd _examples/hello-world && npm run dev:debug",
     "helloworld:gen": "cd _examples/hello-world && npm run gen",
     "helloworld:gen:debug": "cd _examples/hello-world && npm run gen:debug",
+    "blog": "cd _examples/blog && npm run dev",
+    "blog:serve": "cd _examples/blog && npm run serve",
+    "blog:debug": "cd _examples/blog && npm run dev:debug",
+    "blog:gen": "cd _examples/blog && npm run gen",
+    "blog:gen:debug": "cd _examples/blog && npm run gen:debug",
     "features": "cd _examples/features && npm run dev",
     "features:debug": "cd _examples/features && npm run dev:debug",
     "features:gen": "cd _examples/features && npm run gen",
