feat: added the ability to control the sidebar by using frontmatter

--- a/_packages/plugins/theme-docs/package.json
+++ b/_packages/plugins/theme-docs/package.json
@@ -24,6 +24,7 @@
     "@minipress/custom-container": "^0.6.0"
   },
   "devDependencies": {
+    "@minipress/types": "^0.6.0",
     "@minipress/eslint-config-client": "^0.6.0",
     "@vue/cli-plugin-babel": "^4.0.5",
     "@vue/cli-plugin-eslint": "^4.0.5",
