--- a/_packages/plugins/blog/package.json
+++ b/_packages/plugins/blog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-blog",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "my cool plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -18,16 +18,16 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/plugin-excerpt": "^0.7.0",
-    "@minipress/utils": "^0.7.0",
-    "@minipress/plugin-pages": "^0.7.0"
+    "@minipress/plugin-excerpt": "^0.8.0",
+    "@minipress/plugin-pages": "^0.8.0",
+    "@minipress/utils": "^0.8.0"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "@minipress/eslint-config-node": "^0.7.0",
-    "jest": "^24.9.0",
+    "@minipress/eslint-config-node": "^0.8.0",
+    "@minipress/markdown": "^0.8.0",
+    "@minipress/types": "^0.8.0",
     "@types/jest": "^24.0.18",
-    "@minipress/markdown": "^0.7.0",
-    "@minipress/types": "*"
+    "eslint": "^6.6.0",
+    "jest": "^24.9.0"
   }
 }
