--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@minipress/plugin-components",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "",
   "scripts": {
     "test": "jest --clearCache && jest ."
   },
   "main": "src/index.js",
   "dependencies": {
-    "fs-extra": "^8.1.0",
-    "@minipress/utils": "^0.7.0"
+    "@minipress/utils": "^0.8.0",
+    "fs-extra": "^8.1.0"
   },
   "devDependencies": {
+    "@minipress/test-utils": "^0.8.0",
+    "@minipress/types": "^0.8.0",
     "@types/fs-extra": "^8.0.1",
-    "@minipress/types": "^0.7.0",
-    "@minipress/test-utils": "^0.7.0",
     "@types/jest": "^24.0.19",
     "jest": "^24.9.0"
   },
