--- a/_packages/plugins/excerpt/package.json
+++ b/_packages/plugins/excerpt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-excerpt",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "my cool plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -17,9 +17,9 @@
   },
   "main": "src/index.js",
   "devDependencies": {
-    "jest": "^24.9.0",
+    "@minipress/markdown": "^0.8.0",
+    "@minipress/types": "^0.8.0",
     "@types/jest": "^24.0.21",
-    "@minipress/markdown": "^0.7.0",
-    "@minipress/types": "*"
+    "jest": "^24.9.0"
   }
 }
